# Kitt-bot

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
alias/: rarity.json
docs/commands/: search_prices.md  slash.md
src/: commands.rs  components.rs  main.rs  models.rs  utils.rs
src/commands/: card_prices.rs  event_handler.rs  help.rs  prices.rs
src/components/: helper.rs  pagination.rs
src/models/: card.rs
src/utils/: card.rs  embed.rs  global.rs  paginator.rs  query.rs  search.rs  types.rs
