[package]
name = "smollilac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.43.0"
shuttle-serenity = "0.43.0"
tracing = "0.1.37"
poise = "0.6.1"
mongodb = "2.8.2"
futures = "0.3.30"
