[package]
name = "kitt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.86"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
time = "0.3.36"
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tracing = "0.1.40"
poise = "0.6.1"
mongodb = "3.0.1"
futures = "0.3.30"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }